# Workshop7_October_2025_Streamlit

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  docker-compose.yml  pyproject.toml
pages/: 1_🔄 Approccio System Dynamics.py  2_📈 Esempio simulazioni e risultati.py
plots_data/: Annual adoption HP.csv  Annual adoption HT.csv  Battery installed capacity.csv  Calibration_HP.csv  Calibration_PV.csv  Cost cantonal Levy.csv  Cost federal Levy.csv  Electricity produced and consumed District.csv  Electricity produced and consumed.csv  Grid updating cost.csv  Historical electricity consumption.csv  Historical electricity production.csv  Historical energy consumption.csv  Levy.csv  Power installed.csv  Share buildings PV.csv  Share buildings battery.csv
